--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+# 不提交node_moduls 表示注释。
 node_modules
+# text.txt
+# *.txt 指定所有.txt文件
+
+# 刚才那个加号就相当于是暂存到更改里面 git add *,
+# 然后这样输入你想写的文字，然后按上面的对钩，就是 git commit -m '我刚才输入的文字'
+# 然后下面那个就是git push操作，如果你看到左边有下载的小箭头就代表你本地的是旧的，
+# 有新的东西需要下载下来也就是（git pull）
+# ，他报错好像是网络不好。还是啥情况，具体的我在找原因。
+# 这个文件是用来指定哪些文件不被提交的，例如node_modules，或者你添加一些其他的不想被提交
+# 的文件，就这么写，例如text.txt
