--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "create-react-app": "^4.0.3"
   },
   "devDependencies": {
+    "antd": "^4.16.3",
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
   }
