--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "create-react-app": "^4.0.3"
   },
   "devDependencies": {
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.16.3",
     "react-router-dom": "^5.2.0",
     "webpack": "^5.39.0",
