--- a/卢天宇/Vue/vue3/package.json
+++ b/卢天宇/Vue/vue3/package.json
@@ -23,10 +23,10 @@
     "eslint-plugin-vue": "^7.0.0",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^7.3.1",
     "vue-cli-plugin-ant-design": "~1.0.1",
     "vue-router": "^4.0.8",
-    "vuex": "^4.0.1",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1"
+    "vuex": "^4.0.1"
   }
 }
